- Add JQuery goodness to get dropdowns to work in mobile interface - Correct embarrassing grammatical errors in 404.html and index.html - Fix colouring of navbar lists so that selected menu item clearly visible.

--- a/static/css/siddhuw.css
+++ b/static/css/siddhuw.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 .navbar-inverse .brand, .navbar-inverse .nav > li > a {
-    color: #ffffff;
+    color: #aaa;
 }
 
 /* From http://twitter.github.com/bootstrap/ */
